# marketplace

./: CHANGELOG.md  README.md
.claude-plugin/: marketplace.json
claude-proxy/: CLAUDE.md  README.md
claude-proxy/src/config/: index.ts
claude-proxy/src/providers/: base.ts  glm.ts  index.ts  ollama.ts  openai.ts  vllm.ts
sdd/: CHANGELOG.md  COMMANDS.md  DOCUMENTATION_STATUS.md  HELP.md  QUICKSTART.md  README.md  SPEC_KIT_INTEGRATION.md  START.md  UPDATE_GUIDE.md  WORKFLOW_VALIDATION.md
sdd/.cache/: config.json
sdd/commands/: README.md  analyze.md  checklist.md  constitution.md  help.md  plan.md  specify.md
sdd/commands/core/: auto-update-github-spec-kit.md  implement.md  plan.md  specify.md  tasks.md  update-github-spec-kit.md
sdd/commands/mcp/: browser-test.md  cache.md  get-docs.md  help.md  ide-diagnostics.md  resolve-library.md
sdd/commands/quality/: code-validate.md  docs-sync.md  setup-hooks.md
sdd/commands/tdd/: coverage.md  design.md  implement.md  specify.md
sdd/samples/: README.md
sdd/samples/01-beginner/hello-world/: README.md
sdd/samples/02-intermediate/portfolio/: README.md
sdd/samples/03-advanced/kanban/: README.md
sdd/samples/03-advanced/kanban-board/: Makefile  README.md
sdd/samples/04-reference/authentication/: README.md
sdd/samples/05-complete-example/specs/001-collaborative-task-management/: mcp-workflow.md  validation-setup.md
sdd/specs/: README.md  tdd-architecture-template.md  tdd-specification-template.md
sdd/specs/001-sdd-plugin/: claude-developer-guide.md  compliance.md  how-to.md
sdd/specs/003-tdd-example/: spec.md  tdd-architecture.md  tdd-spec.md
sdd/templates/: README.md  project-constitution.md  project-readme.md  quality-gates.md  sdd-structure.md  tdd-workflow.md  testing-checklist.md  validation-setup.md
smartcommit/: README.md
smartcommit/.claude-plugin/: plugin.json
smartcommit/commands/: changelog.md  commit.md  help.md  release.md  version.md
smartcommit/samples/multi-language/: Cargo.toml  README.md  package.json  pyproject.toml  smartcommit.json
smartcommit/samples/simple/: README.md
smartcommit/scripts/: usage_example.sh
(+12 files in other folders)
