[package]
name = "multi-language-project"
version = "1.0.0"
edition = "2021"
authors = ["SmartCommit Team <team@smartcommit.dev>"]
description = "Multi-language project demonstrating SmartCommit across different configuration formats"
license = "MIT"
repository = "https://github.com/smartcommit/multi-language-project"
keywords = ["multi-language", "smartcommit", "typescript", "python", "rust"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "multi-lang"
path = "src/main.rs"

[lib]
name = "multi_language_project"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true